--- a/manifest.json
+++ b/manifest.json
@@ -1,17 +1,10 @@
 {
   "manifest_version": 3,
   "name": "Kaigosha Site Timer",
-  "description": "Control daily and per-session usage time for X and Instagram.",
-  "version": "1.0.0",
-  "permissions": ["storage", "tabs", "alarms"],
-  "host_permissions": [
-    "*://x.com/*",
-    "*://*.x.com/*",
-    "*://twitter.com/*",
-    "*://*.twitter.com/*",
-    "*://instagram.com/*",
-    "*://*.instagram.com/*"
-  ],
+  "description": "Strict usage limits with cooldowns, warnings, break-glass, and diagnostics.",
+  "version": "2.0.0",
+  "permissions": ["storage", "tabs", "alarms", "notifications", "webNavigation"],
+  "host_permissions": ["<all_urls>"],
   "background": {
     "service_worker": "src/background/background.js",
     "type": "module"
@@ -20,16 +13,10 @@
     "default_title": "Kaigosha Timer",
     "default_popup": "src/popup/popup.html"
   },
+  "options_page": "src/options/options.html",
   "content_scripts": [
     {
-      "matches": [
-        "*://x.com/*",
-        "*://*.x.com/*",
-        "*://twitter.com/*",
-        "*://*.twitter.com/*",
-        "*://instagram.com/*",
-        "*://*.instagram.com/*"
-      ],
+      "matches": ["<all_urls>"],
       "js": ["src/content/tracker.js"],
       "run_at": "document_idle"
     }
