--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,7 @@
   "description": "Strict usage limits with cooldowns, warnings, break-glass, and diagnostics.",
   "version": "2.0.0",
   "permissions": ["storage", "tabs", "alarms", "notifications", "webNavigation"],
-  "host_permissions": ["<all_urls>"],
+  "host_permissions": ["http://*/*", "https://*/*"],
   "background": {
     "service_worker": "src/background/background.js",
     "type": "module"
@@ -16,7 +16,7 @@
   "options_page": "src/options/options.html",
   "content_scripts": [
     {
-      "matches": ["<all_urls>"],
+      "matches": ["http://*/*", "https://*/*"],
       "js": ["src/content/tracker.js"],
       "run_at": "document_idle"
     }
